gradient box added

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.ls{
+.box {
     height: 100px;
-    background-color: linear-gradient(to right, rgb(236, 159, 5), rgb(255, 78, 0));
+    background: linear-gradient(to right, rgb(236, 159, 5), rgb(255, 78, 0));
 }
