--- a/style.css
+++ b/style.css
@@ -1,4 +1,38 @@
 .box {
     height: 100px;
     background: linear-gradient(to right, rgb(236, 159, 5), rgb(255, 78, 0));
+    color: rgb(255, 255, 255);
+    display: flex;                
+    align-items: center;
+    padding: 0 10px;
+}
+
+#searchbar{ 
+    width: 300px;
+    padding: 5px;                 
+    font-size: 16px;
+    border-radius: 5px;
+    border: none;
+    padding: 6px;
+    font-size: 12px;
+    background-image: url(https://tse2.mm.bing.net/th?id=OIP.iGWCX9X7dPCTs4YhIGA0qwHaIA&pid=Api&P=0&h=220);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 10px;
+}
+
+h1{
+    display: flex;                
+    align-items: center;          
+    gap: 10px;  
+}
+
+#dp {
+    margin-left: auto;           
+    max-width: 100%;              
+    height: 30px;
+}
+
+body{
+    background-color: rgb(255, 78, 0);
 }
