--- a/style.css
+++ b/style.css
@@ -78,6 +78,11 @@ body{
     cursor: pointer;
 }
 
+.menu_buttons:hover{
+    background-color: rgba(255, 255, 255, 0.2); /* Light hover effect */
+    transform: scale(1.02);
+}
+
 .center_container{
     background-color: green;
     min-height: 400px;
@@ -88,6 +93,44 @@ body{
     background-color: blue;
     min-height: 400px;
     flex: 1;
+}
+
+#jobtag{
+
+}
+
+.left_container {
+    display: flex;
+    flex-direction: column; 
+    width: 250px;
+    padding: 10px;
+    background-color: rgb(255, 255, 255,0.2);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border: solid 1px white;
+}
+
+.job_type {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    padding: 10px;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.job_type:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    transform: scale(1.02);
+}
+
+.job_type img {
+    width: 40px;
+    height: 40px; 
+    object-fit: cover; 
+}
+
+.job_type span {
+    font-size: 14px; 
+    font-weight: bold;
 }
 
 .right_container{
