--- a/style.css
+++ b/style.css
@@ -175,3 +175,35 @@ textarea{
     gap: 10px;
 }
 
+#post_bar{
+    margin-top: 5px;
+    background-color: rgb(255, 255, 255,0.2);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border:solid 1px white;
+    padding: 10px;
+    display: flex;
+    align-self: center;
+}
+
+#post_content{
+    padding: 4px;
+    font-size: 13px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#post_bar img{
+    width: 40px;
+    height: 40px; 
+    object-fit: cover;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
+}
+
+#post_name{
+    font-weight: bold;
+    color: white;
+    margin-right: 10px;
+}
