--- a/fstyle.css
+++ b/fstyle.css
@@ -168,6 +168,7 @@ textarea{
 }
 
 #post_bar {
+    margin-top: 5px;
     background-color: rgb(255, 255, 255,0.2);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     border:solid 1px white;
